@@ -56,6 +56,7 @@ admin.caption.metadescriptionhelp=HTML meta beskrivelse er en beskrivelse af en 
 admin.caption.nonadminmove=Tillad ikke-administratore at flytte emner.
 admin.caption.parser=Parser
 admin.caption.persistence=Persistens
+admin.caption.printnewwindow=Open printable page links in new window
 admin.caption.recentchanges=Genindl\u00E6s seneste \u00E6ndringer
 admin.caption.recentchangesdefault=Standard antal rettelser der vises
 admin.caption.recentchangesfail=Fejl ved hentning af seneste rettelser\: {0}.
