@@ -56,6 +56,7 @@ admin.caption.metadescriptionhelp=Die HTML Meta Beschreibung wird von Suchmaschi
 admin.caption.nonadminmove=Benutzer ohne Admin-Status d\u00FCrfen Seiten verschieben
 admin.caption.parser=Parser
 admin.caption.persistence=Persistenz
+admin.caption.printnewwindow=Open printable page links in new window
 admin.caption.recentchanges=Aktuelle \u00C4nderungen erneut laden
 admin.caption.recentchangesdefault=Voreingestellte Anzahl der aktuellen \u00C4nderungen werden angezeigt
 admin.caption.recentchangesfail=Fehler beim Laden der aktuellen \u00C4nderungen\: {0}.
