@@ -56,6 +56,7 @@ admin.caption.metadescriptionhelp=HTML\u5143\u6570\u636E\u63CF\u8FF0\u901A\u5E38
 admin.caption.nonadminmove=\u5141\u8BB8\u975E\u7BA1\u7406\u5458\u79FB\u52A8\u4E3B\u9898
 admin.caption.parser=\u89E3\u6790\u5668
 admin.caption.persistence=\u5B58\u8D2E\u7C7B\u578B
+admin.caption.printnewwindow=Open printable page links in new window
 admin.caption.recentchanges=\u56DE\u6EDA\u6700\u8FD1\u7684\u66F4\u65B0
 admin.caption.recentchangesdefault=\u663E\u793A\u6700\u8FD1\u66F4\u65B0\u7684\u9ED8\u8BA4\u6570
 admin.caption.recentchangesfail=\u52A0\u8F7D\u6700\u8FD1\u4FEE\u6539\u5931\u8D25\u7684\u4F4D\u7F6E\uFF1A {0}\u3002
