@@ -56,6 +56,7 @@ admin.caption.metadescriptionhelp=The HTML meta description is a description of 
 admin.caption.nonadminmove=\u5141\u8A31\u975E\u7BA1\u7406\u54E1\u79FB\u52D5\u4E3B\u984C
 admin.caption.parser=\u89E3\u6790\u5668
 admin.caption.persistence=\u5B58\u8CAF\u985E\u578B
+admin.caption.printnewwindow=Open printable page links in new window
 admin.caption.recentchanges=\u56DE\u6EFE\u6700\u8FD1\u7684\u66F4\u65B0
 admin.caption.recentchangesdefault=\u986F\u793A\u6700\u8FD1\u66F4\u65B0\u7684\u9ED8\u8A8D\u6578
 admin.caption.recentchangesfail=\u52A0\u8F09\u6700\u8FD1\u4FEE\u6539\u5931\u6557\u7684\u4F4D\u7F6E\uFF1A {0}\u3002
